# dune-extensions

./: .gitignore  CMakeLists.txt  README.md
DXArt/: ArtServiceHelper.cxx  ArtServiceHelper.h  CMakeLists.txt  README.txt
DXGeometry/: CMakeLists.txt  GeoHelper.cxx  GeoHelper.h  LArGeoManager.cxx  LArGeoManager.h  PlanePosition.h  README.md
DXInterface/: CMakeLists.txt  RawDigitAnalysisService.h  TriggerFilterService.h
DXModules/: CMakeLists.txt  DXDisplay.fcl  DXDisplay_module.cc  DXDisplay_module.cxx  dxdisplay_module.fcl  run_dxdisplay.fcl  run_dxdisplay_35t.fcl  run_dxdisplay_fdws.fcl
DXPerf/: CMakeLists.txt  MCTrajectoryFollower.cxx  MCTrajectoryFollower.h  README.md  SimChannelTupler.cxx  SimChannelTupler.h  TpcSignalMap.h  (+7 more)
test/: CMakeLists.txt  README.md
test/DXArt/: CMakeLists.txt  README.md  README.txt  test_ArtServiceHelper.cxx  test_DetectorProperties.cxx  test_Geometry.cxx  test_LArProperties.cxx  test_RandomNumberGenerator.cxx  test_TFileService.cxx  test_TimeService.cxx
test/DXGeometry/: CMakeLists.txt  README.md  draw_geometry.cxx  test_geometry.cxx
test/DXPerf/: CMakeLists.txt  test_MCTrajectoryFollower.cxx  test_SimChannelTupler.cxx  test_TpcSignalMap.cxx  test_TpcSignalMapComparison.cxx  test_TpcSignalMatchTree.cxx  test_TpcSignalMatcher.cxx
test/DXUtil/: CMakeLists.txt  test_ChannelTickHistCreator.cxx  test_Range.cxx  test_TpcSegment.cxx  test_TpcTypes.cxx  test_intProcess.cxx  test_reducedPDG.cxx
test/art/: CMakeLists.txt  test_TFileService.cxx
test/chanmap/: CMakeLists.txt  chanmap.cxx
test/fcl/: CMakeLists.txt  test_fclparse.cxx
(+280 files in other folders)
